message_macro/message_macro/tests/ui/unsupported_structure.stderr
error: Only named fields are supported
 --> tests/ui/unsupported_structure.rs:4:25
  |
4 | struct UnsupportedStruct(u8, u16, u32);
  |                         ^^^^^^^^^^^^^^
